--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "vue3-native-camera",
   "version": "0.0.1",
   "private": false,
+  "repository": {
+    "type": "github",
+    "url": "https://github.com/s18141099/vue3-native-camera"
+  },
   "main": "./dist/index.umd.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
