--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "vue3-native-camera",
   "version": "0.2.3",
   "private": false,
+  "license":"MIT",
   "repository": {
     "type": "github",
     "url": "https://github.com/s18141099/vue3-native-camera"
   },
-  "license":"MIT",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -24,6 +24,7 @@
     "vue",
     "vue3",
     "camera",
+    "component",
     "native"
   ],
   "scripts": {
